# Manimato.ai

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  cleaned_index_mapping.json  cleaned_manim_doc_faiss.index  cleaned_manim_faiss.index  docker-compose.yml  f1.py  f2.py  global_packages.txt  gunicorn_conf.py  main.py  pyproject.toml  render.yaml  requirements.txt
alembic/: env.py
alembic/versions/: 1da1491ed207_initial.py  46a5481cba34_add_content_field_in_code.py  7e868a652105_remove_sender_role_field_from_message.py  8de7a019407a_add_role_column_to_users.py
app/: __init__.py  deps.py  main.py
app/api/v1/: router.py
app/api/v1/auth/: signin.py  signup.py
app/api/v1/endpoints/: chat.py  generate_video.py  inference.py  router.py
app/core/: config.py  llm_provider.py  logger.py
app/database/: base.py  session.py
app/database/models/: __init__.py  chat.py  code.py  message.py  prompt.py  user.py  video.py
app/exceptions/: handlers.py
app/middlewares/: cors.py  request_logger.py
app/routers/: health.py
app/routers/v1/: router.py
app/routers/v1/auth/: routes.py  signin.py  signup.py
app/routers/v1/endpoints/: generate_video.py  router.py
app/routers/v1/message/: routes.py
app/routers/v1/videos/: inference.py  router.py  routes.py
app/schemas/: chat.py  inference.py  stream.py
app/services/: chain_manager.py  chat_service.py  cloud_service.py  message_service.py  prompt_templates.py  render_service.py  stream_service.py
app/utils/: hashing_function.py  helpers.py  jwt_helper.py  retry.py
dev/: abc.ipynb  abc_converted.py  cleaned_doc_index_mapping.json  cleaned_manim_examples.json  index_mapping.json  manim_documentation.json  manim_examples.json  manim_faiss.index
manimato_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
