[project]
name = "manimato-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.11.0",
    "fastapi>=0.115.14,<1.0.0",
    "langchain==0.1.20",
    "langchain-community>=0.0.38,<1.0.0",
    "langchain-openai==0.1.7",
    "uvicorn[standard]>=0.35.0,<1.0.0",
]


[dependency-groups]
dev = [
  "taskipy>=1.14.1",
  "ruff>=0.12.2",
  "pytest",
  "taskipy",
  "pre-commit>=4.2.0",
]

[tool.taskipy.tasks]
dev = "uvicorn app.main:app --reload"
start = "uvicorn app.main:app --host 0.0.0.0 --port 8000"
format = "ruff format ."
lint = "ruff check ."
lint-fix = "ruff check . --fix"
test = "pytest"
export = "uv export --format=requirements.txt --without-hashes > requirements.txt"

[tool.ruff]
line-length = 88
target-version = "py312"
extend-select = ["I"]  
extend-ignore = ["E203", "W503"]  

[tool.ruff.exclude]
exclude = [
  ".git",
  ".venv",
  "build",
  "dist",
  "migrations",
  "scripts/experimental.py",
  "legacy_code/"
]

[tool.ruff.lint]
preview = true


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
tab-width = 4
line-ending = "lf"
